# gauss_newton

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  codeql.yml
example/: CMakeLists.txt
src/: CMakeLists.txt  gauss_newton.cpp  gauss_newton.h  problem.cpp  problem.h
test/: CMakeLists.txt  biggerproblem.cpp  jacobiancalc.cpp  multivariables.cpp  test.cpp  toyproblem.cpp
